# the-turing-way

.claude/commands/: install-ttw-mcp.md  style.md  the-turing-way--combined.md
book/: Makefile
book/website/: myst.yml
book/website/artificial-intelligence/: ai-agent-standards.md  artificial-intelligence.md
tools/skills/: install-ttw-mcp.md  style.md
tools/ttw-ai-server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tools/ttw-ai-server/src/ttw_server/: cli.py  content.py  openai_api.py  server.py
