[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttw-ai-server"
version = "0.1.0"
description = "MCP and HTTP tool server exposing The Turing Way as a queryable knowledge base"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
ttw-server = "ttw_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
